# animatch

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  style.css  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.toml
db/: animatch.db  apply_translations.py  cleaned_animatch.sql  d1_update.sql  fetch_images.js  fetch_images_retry.js  schema.sql  seed.sql  seed_generator.js  translate_db.py  updated_animatch.sql
docs/: anime_character_db.md  matching-accuracy-fix.md  privacy_policy_ko.md  scaling_partnership_report.md  tarot-prompts.md  tech_stack.md
e2e/: debug-img.spec.ts  debug-img2.spec.ts  debug-prod.spec.ts  result-image.spec.ts
functions/: _middleware.ts
migrations/: 0001_initial.sql  0002_ab_testing.sql  0003_match_feedback.sql  0004_character_metadata.sql
ml/: add_character.py  analyze_embeddings.py  enrich_embeddings.py  export_arcface_onnx.py  export_clip_onnx.py  generate_dual_embeddings.py  generate_embeddings.py  generate_og_data.py  generate_og_default.py  generate_tarot_images.py  patch_embeddings.py  pyproject.toml  quantize_arcface.py  quantize_clip_q4.py  quantize_model.py  requirements.txt  sync_seed.py
playwright-report/: index.html
public/: _headers  _redirects  _routes.json  embeddings.json  robots.txt  sitemap.xml  sw.js
reporting-proxy/: .dev.vars  package.json  pnpm-lock.yaml  test-scrub.ts  wrangler.toml
scripts/: export_embeddings.py  gen-sitemap.cjs  translate_db.py  upload_assets.sh  verify_db_api.py
seeding/: post_templates.md  (+1 more)
(+90 files in other folders)
